--- a/symfony/project/templates/email/confirmation.html.twig
+++ b/symfony/project/templates/email/confirmation.html.twig
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <h3>Hello {{ user.getName() }}, please confirm your e-mail address.</h3>
+<h3>
+    Hello {{ user.getName() }}, please confirm your e-mail address.
+</h3>
 
-        <p>
-            Please confirm your e-mail address by clicking <a href="{{ url('default_confirm_token', {'token': user.getConfirmationToken()}) }}">this link</a>.
-        </p>
-    </body>
-</html>
+<p>
+    Please confirm your e-mail address by clicking
+    <a href="{{ url('default_confirm_token', {'token': user.getConfirmationToken()}) }}">this</a>
+    link or, type the code inside the form: <b>{{ user.getConfirmationToken() }}</b>
+</p>
